main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "DEQ", "NEQ", 
                      "LT", "LE", "GT", "GE", "DC", "LB", "RB", "LSB", "RSB", 
                      "DOT", "CM", "SM", "CL", "LP", "RP", "EQ", "ID", "INTLIT", 
                      "POSINTLIT", "FLOATLIT", "BOOLEANLIT", "STRINGLIT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "LINE_CMT", "BLOCK_CMT", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declare = 1
    RULE_var_declare = 2
    RULE_short_form = 3
    RULE_identifier_list = 4
    RULE_init_var = 5
    RULE_pair = 6
    RULE_type_decl_init = 7
    RULE_parameter_list_declare_infunc = 8
    RULE_parameter_list_declare = 9
    RULE_parameter_declare = 10
    RULE_type_parameter = 11
    RULE_func_declare = 12
    RULE_type_return = 13
    RULE_type_decl = 14
    RULE_atomic_type = 15
    RULE_array_type = 16
    RULE_dimension = 17
    RULE_void_type = 18
    RULE_auto_type = 19
    RULE_exp = 20
    RULE_exp1 = 21
    RULE_relational = 22
    RULE_exp2 = 23
    RULE_logical = 24
    RULE_exp3 = 25
    RULE_adding = 26
    RULE_exp4 = 27
    RULE_multiplying = 28
    RULE_exp5 = 29
    RULE_exp6 = 30
    RULE_exp7 = 31
    RULE_index_operator = 32
    RULE_exp_list_array = 33
    RULE_operands = 34
    RULE_function_call = 35
    RULE_statement = 36
    RULE_assign_statement = 37
    RULE_lhs = 38
    RULE_index_expression = 39
    RULE_match_statement = 40
    RULE_other_statement = 41
    RULE_unmatch_statement = 42
    RULE_for_statement = 43
    RULE_scalar_init_expr = 44
    RULE_scalar_var = 45
    RULE_condition_expr = 46
    RULE_update_expr = 47
    RULE_while_statement = 48
    RULE_do_while_statement = 49
    RULE_break_statement = 50
    RULE_continue_statement = 51
    RULE_return_statement = 52
    RULE_call_statement = 53
    RULE_exp_list_call = 54
    RULE_block_statement = 55
    RULE_statement_list = 56
    RULE_arraylit = 57
    RULE_exp_list_arraylit = 58

    ruleNames =  [ "program", "declare", "var_declare", "short_form", "identifier_list", 
                   "init_var", "pair", "type_decl_init", "parameter_list_declare_infunc", 
                   "parameter_list_declare", "parameter_declare", "type_parameter", 
                   "func_declare", "type_return", "type_decl", "atomic_type", 
                   "array_type", "dimension", "void_type", "auto_type", 
                   "exp", "exp1", "relational", "exp2", "logical", "exp3", 
                   "adding", "exp4", "multiplying", "exp5", "exp6", "exp7", 
                   "index_operator", "exp_list_array", "operands", "function_call", 
                   "statement", "assign_statement", "lhs", "index_expression", 
                   "match_statement", "other_statement", "unmatch_statement", 
                   "for_statement", "scalar_init_expr", "scalar_var", "condition_expr", 
                   "update_expr", "while_statement", "do_while_statement", 
                   "break_statement", "continue_statement", "return_statement", 
                   "call_statement", "exp_list_call", "block_statement", 
                   "statement_list", "arraylit", "exp_list_arraylit" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    DEQ=30
    NEQ=31
    LT=32
    LE=33
    GT=34
    GE=35
    DC=36
    LB=37
    RB=38
    LSB=39
    RSB=40
    DOT=41
    CM=42
    SM=43
    CL=44
    LP=45
    RP=46
    EQ=47
    ID=48
    INTLIT=49
    POSINTLIT=50
    FLOATLIT=51
    BOOLEANLIT=52
    STRINGLIT=53
    UNCLOSE_STRING=54
    ILLEGAL_ESCAPE=55
    LINE_CMT=56
    BLOCK_CMT=57
    WS=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclareContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclareContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 118
                self.declare()
                self.state = 121 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.ID):
                    break

            self.state = 123
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(MT22Parser.Var_declareContext,0)


        def func_declare(self):
            return self.getTypedRuleContext(MT22Parser.Func_declareContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = MT22Parser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.var_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.func_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def short_form(self):
            return self.getTypedRuleContext(MT22Parser.Short_formContext,0)


        def init_var(self):
            return self.getTypedRuleContext(MT22Parser.Init_varContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_var_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declare" ):
                return visitor.visitVar_declare(self)
            else:
                return visitor.visitChildren(self)




    def var_declare(self):

        localctx = MT22Parser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.short_form()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.init_var()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Short_formContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def type_decl(self):
            return self.getTypedRuleContext(MT22Parser.Type_declContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_short_form

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShort_form" ):
                return visitor.visitShort_form(self)
            else:
                return visitor.visitChildren(self)




    def short_form(self):

        localctx = MT22Parser.Short_formContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_short_form)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.identifier_list()
            self.state = 134
            self.match(MT22Parser.CL)
            self.state = 135
            self.type_decl()
            self.state = 136
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(MT22Parser.Identifier_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_identifier_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list(self):

        localctx = MT22Parser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifier_list)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(MT22Parser.ID)
                self.state = 139
                self.match(MT22Parser.CM)
                self.state = 140
                self.identifier_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_varContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def pair(self):
            return self.getTypedRuleContext(MT22Parser.PairContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_init_var

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInit_var" ):
                return visitor.visitInit_var(self)
            else:
                return visitor.visitChildren(self)




    def init_var(self):

        localctx = MT22Parser.Init_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_init_var)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(MT22Parser.ID)
            self.state = 145
            self.pair()
            self.state = 146
            self.exp()
            self.state = 147
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PairContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def pair(self):
            return self.getTypedRuleContext(MT22Parser.PairContext,0)


        def exp(self):
            return self.getTypedRuleContext(MT22Parser.ExpContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def type_decl_init(self):
            return self.getTypedRuleContext(MT22Parser.Type_decl_initContext,0)


        def EQ(self):
            return self.getToken(MT22Parser.EQ, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_pair

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPair" ):
                return visitor.visitPair(self)
            else:
                return visitor.visitChildren(self)




    def pair(self):

        localctx = MT22Parser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_pair)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.CM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(MT22Parser.CM)
                self.state = 150
                self.match(MT22Parser.ID)
                self.state = 151
                self.pair()
                self.state = 152
                self.exp()
                self.state = 153
                self.match(MT22Parser.CM)
                pass
            elif token in [MT22Parser.CL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(MT22Parser.CL)
                self.state = 156
                self.type_decl_init()
                self.state = 157
                self.match(MT22Parser.EQ)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_decl_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_type_decl_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_decl_init" ):
                return visitor.visitType_decl_init(self)
            else:
                return visitor.visitChildren(self)




    def type_decl_init(self):

        localctx = MT22Parser.Type_decl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_type_decl_init)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 161
                self.atomic_type()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 162
                self.auto_type()
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 163
                self.array_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_list_declare_infuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def parameter_list_declare(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_declareContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_list_declare_infunc

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list_declare_infunc" ):
                return visitor.visitParameter_list_declare_infunc(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list_declare_infunc(self):

        localctx = MT22Parser.Parameter_list_declare_infuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_list_declare_infunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(MT22Parser.LB)
            self.state = 167
            self.parameter_list_declare()
            self.state = 168
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_list_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declare(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_declareContext,0)


        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def parameter_list_declare(self):
            return self.getTypedRuleContext(MT22Parser.Parameter_list_declareContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_list_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list_declare" ):
                return visitor.visitParameter_list_declare(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list_declare(self):

        localctx = MT22Parser.Parameter_list_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_parameter_list_declare)
        try:
            self.state = 176
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 170
                self.parameter_declare()
                self.state = 171
                self.match(MT22Parser.CM)
                self.state = 172
                self.parameter_list_declare()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.parameter_declare()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def type_parameter(self):
            return self.getTypedRuleContext(MT22Parser.Type_parameterContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_parameter_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declare" ):
                return visitor.visitParameter_declare(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declare(self):

        localctx = MT22Parser.Parameter_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_declare)
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(MT22Parser.ID)
                self.state = 179
                self.match(MT22Parser.CL)
                self.state = 180
                self.type_parameter()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(MT22Parser.INHERIT)
                self.state = 182
                self.match(MT22Parser.ID)
                self.state = 183
                self.match(MT22Parser.CL)
                self.state = 184
                self.type_parameter()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 185
                self.match(MT22Parser.OUT)
                self.state = 186
                self.match(MT22Parser.ID)
                self.state = 187
                self.match(MT22Parser.CL)
                self.state = 188
                self.type_parameter()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 189
                self.match(MT22Parser.INHERIT)
                self.state = 190
                self.match(MT22Parser.OUT)
                self.state = 191
                self.match(MT22Parser.ID)
                self.state = 192
                self.match(MT22Parser.CL)
                self.state = 193
                self.type_parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_parameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_type(self):
            return self.getTypedRuleContext(MT22Parser.Atomic_typeContext,0)


        def array_type(self):
            return self.getTypedRuleContext(MT22Parser.Array_typeContext,0)


        def auto_type(self):
            return self.getTypedRuleContext(MT22Parser.Auto_typeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_type_parameter

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_parameter" ):
                return visitor.visitType_parameter(self)
            else:
                return visitor.visitChildren(self)




    def type_parameter(self):
